--- a/.github/workflows/tests_run.yml
+++ b/.github/workflows/tests_run.yml
@@ -26,3 +26,9 @@ jobs:
           pip install poetry
           make install
           make test
+      - uses: paambaati/codeclimate-action@v3.0.0
+        env:
+          CC_TEST_REPORTER_ID: ${{a4b3fe4585c455616b060e6cae9afaea6a786e97a9a2d59199d51c2866486d9d}}
+        with:
+          coverageCommand: poetry run pytest --cov=fizz_buzz --cov-report xml
+          debug: true
